# stocks

./: LICENSE  plot.py  pyproject.toml
results/: perc.csv
stocks/src/: interface.py  stocks.py
tickers/: NASDAQ.csv
