[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stocks_brandonedmunds2"
version = "0.0.1"
authors = [
  { name="Brandon Edmunds" },
]
description = "stocks"
readme = "README.md"
dependencies = [
    "numpy",
    "pandas",
    "yfinance",
    "matplotlib"
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/brandonedmunds2/stocks"
"Bug Tracker" = "https://github.com/brandonedmunds2/stocks/issues"